fix: final touches

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -30,6 +30,7 @@
       <div class="ratings">
         <h2 class="title">Ratings</h2>
         <div class="ratin-box"></div>
+        <button id="toggleRatings" class="toggle-button">Show Ratings</button>
       </div>
       <footer class="footer">
         <h1>Footer Component</h1>
